--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <!-- ▼HEADER DE LA PAGINA-->
     <header class="header container-fluid">
         <img width="169px" height="127px" src="./multimedios/logo2.png" alt="logo estampida"> 
-        <h1 class="header__titulo" data-aos="fade-down"
+        <h1 class="header__titulo text-uppercase" data-aos="fade-down"
         data-aos-easing="linear"
-        data-aos-duration="1500">ESTAMPIDA</h1>
+        data-aos-duration="1500">estampida</h1>
         <nav class="header__menu navbar navbar-expand-lg navbar-dark">
         <section class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,11 +27,11 @@
             </button>            
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="header__nav navbar-nav">
-                <li class="header__nav--li nav-item"><a class="nav-link active" aria-current="page" href="index.html">HOME</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link" href="./page/videos.html">VIDEOS</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link" href="./page/banda.html">BANDA</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link" href="./page/galeria.html">GALERIA</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link" href="./page/contacto.html">CONTACTO</a></li>              
+                <li class="header__nav--li nav-item"><a class="nav-link active text-uppercase" aria-current="page" href="index.html">home</a></li>
+                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/videos.html">videos</a></li>
+                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/banda.html">banda</a></li>
+                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/galeria.html">galeria</a></li>
+                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/contacto.html">contacto</a></li>              
             </ul>
             </div>
         </section>
@@ -41,8 +41,13 @@
 <!-- ▼MAIN-->
     <main class="main__principal">
         <img class="main__principal--imagen" src="./multimedios/principal2.jpg" alt="imagen grupal estampida">      
+        <audio class="main__principal--audio" controls autoplay>
+            <source src="./multimedios/BICHO BRAVO mp3.mp3" type="audio/mp3">
+            <source src="./multimedios/BICHO BRAVO wav.wav" type="audio/wav">
+            Lo sentimos, tu navegador no es compatible con el audio HTML5 
+        </audio>
         <div class="main__principal--section">
-            <img class="main__principal--imagen2" src="./multimedios/Perfil.jpg" alt="perfil imagen estampida">
+            <img class="main__principal--imagen2" src="./multimedios/Perfil.jpg" alt="imagen perfil estampida">
             <section class="main__principal--texto transicion__texto">
                 <h2 class="letraColor">BANDA ARGENTINA DE ROCK</h2>
                 <p class="lead">ESTAMPIDA: Es un grupo de Rock mendocino; se 
@@ -65,10 +70,12 @@
             </section>    
         </div>
         <div>
-            <section class="video">
-                <h3>NUEVO VIDEO!! BICHO BRAVO</h3>
+            <section class="video container-fluid">
+                <h3 class="text-uppercase">nuevo video!! bicho bravo</h3>
+                <article class="ratio ratio-21x9" style="--bs-aspect-ratio: 50%;">
                 <iframe width="727" height="409" src="https://www.youtube.com/embed/HeC0vAOZ_Sk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom"></iframe>
+                </article>
             </section>
         </div>
         <div id="carouselExampleIndicators" class="article carousel slide container-fluid" data-bs-ride="true">
@@ -79,13 +86,13 @@
             </article>
             <div class="carousel-inner">
                 <article class="carousel-item active">
-                <img src="./multimedios/home1.jpeg" class="d-block w-100" alt="vocalista">
+                <img src="./multimedios/home1.1.jpg" class="d-block w-100" alt="vocalista">
                 </article>
                 <article class="carousel-item">
-                <img src="./multimedios/home3.jpeg" class="d-block w-100" alt="baterista">
+                <img src="./multimedios/home3.1.jpg" class="d-block w-100" alt="baterista">
                 </article>
                 <article class="carousel-item">
-                <img src="./multimedios/home2.jpeg" class="d-block w-100" alt="bajista">
+                <img src="./multimedios/home2.1.jpg" class="d-block w-100" alt="bajista">
                 </article>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -101,26 +108,30 @@
 <!-- ▲MAIN-->
 <!-- ▼FOOTER DE LA PAGINA-->
     <footer>
-        <div>
-            <ul>
-                <li class="icon"><a href="https://www.facebook.com/Estampida-1728061477284744"><span>Facebook</span></a></li>
-                <li class="icon"><a href="https://www.instagram.com/estampida_rock/"><span>Instagram</span></a></li>
-                <li class="icon"><a href="https://www.youtube.com/channel/UC1mdbTgt8qhGkV7et5-d0fA"><span>YouTube</span></a></li>
-                <li class="icon"><a href="https://soundcloud.com/estampidarock"><span>SoundCloud</span></a></li>
-                <li class="icon"><a href="https://open.spotify.com/artist/0LQGc5KNTRCItEaeTl6QSb?si=8DtR7bQWSyWkBw5kQ0SGxA"><span>Spotify</span></a></li>            
+        <div class="container-fluid">
+            <ul class="icon__footer">
+                <li class="icon icon1"><a href="https://www.facebook.com/Estampida-1728061477284744"><span class="iconify" data-icon="entypo-social:facebook" data-width="50" data-height="50"></span></a></li>
+                <li class="icon icon2"><a href="https://www.instagram.com/estampida_rock/"><span class="iconify" data-icon="fa6-brands:instagram" data-width="50" data-height="50"></span></a></li>
+                <li class="icon icon3"><a href="https://www.youtube.com/channel/UC1mdbTgt8qhGkV7et5-d0fA"><span class="iconify" data-icon="fa:youtube-square" data-width="50" data-height="50"></span></a></li>
+                <li class="icon icon4"><a href="https://soundcloud.com/estampidarock"><span class="iconify" data-icon="akar-icons:soundcloud-fill" data-width="50" data-height="50"></span></a></li>
+                <li class="icon icon5"><a href="https://open.spotify.com/artist/0LQGc5KNTRCItEaeTl6QSb?si=8DtR7bQWSyWkBw5kQ0SGxA"><span class="iconify" data-icon="cib:spotify" data-width="50" data-height="50"></span></a></li>            
             </ul>
-            <h4>ESTAMPIDA 2022 - Todos los derechos reservados</h4>
-            <a class="footerHome" href="index.html">IR A HOME</a>
+            <h4 class="footerTexto">ESTAMPIDA 2022 - Todos los derechos reservados</h4>
+            <article class="footerTexto__home">
+                <a class="footerHome text-uppercase container-fluid" href="index.html">ir a home</a>
+            </article>
         </div>
     </footer>
-<!-- ▲FIN DE LA PAGINA-->
+<!-- ▲ FIN DE LA PAGINA-->
+<!-- ▼ ICONIFY-->
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 <!-- ▼ JS AOS-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
 <!-- ▲ FIN JS AOS-->
-<!-- JavaScript Bundle with Popper -->
+<!-- ▼ JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
