Aplicando sass II y SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="estampida, edm, rock, producer, banda mendoza, rock argentina, bicho bravo, shows, cuyo, videos en vivo, banda en vivo, presentaciones streaming">
+    <meta name="description" content="Sitio Oficial de Estampida. Es considerada una banda emergente de Mendoza, banda argentina y mendocina más original">
     <link rel="shortcut icon" href="./multimedios/icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -16,13 +18,13 @@
 
 <body>
 <!-- ▼HEADER DE LA PAGINA-->
-    <header class="header container-fluid">
-        <img width="169px" height="127px" src="./multimedios/logo2.png" alt="logo estampida"> 
+    <header class="header">
+        <img class="header__log" width="169px" height="127px" src="./multimedios/logo2.png" alt="logo estampida"> 
         <h1 class="header__titulo text-uppercase" data-aos="fade-down"
         data-aos-easing="linear"
         data-aos-duration="1500">estampida</h1>
         <nav class="header__menu navbar navbar-expand-lg navbar-dark">
-        <section class="container-fluid">
+        <section>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>            
@@ -40,7 +42,7 @@
     </header>
 <!-- ▲FIN HEADER DE LA PAGINA-->
 <!-- ▼MAIN-->
-    <main class="main__principal">
+    <main class="main__principal container-fluid">
         <img class="main__principal--imagen" src="./multimedios/principal2.jpg" alt="imagen grupal estampida">      
         <audio class="main__principal--audio" controls autoplay>
             <source src="./multimedios/BICHO BRAVO mp3.mp3" type="audio/mp3">
