--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
         data-aos-easing="linear"
         data-aos-duration="1500">estampida</h1>
         <nav class="header__menu navbar navbar-expand-lg navbar-dark">
-        <section>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>            
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="header__nav navbar-nav">
-                <li class="header__nav--li nav-item"><a class="nav-link active text-uppercase" aria-current="page" href="index.html">home</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/videos.html">videos</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/banda.html">banda</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/galeria.html">galeria</a></li>
-                <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/contacto.html">contacto</a></li>              
-            </ul>
-            </div>
-        </section>
+            <section class="headerMenu">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>            
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="header__nav navbar-nav">
+                        <li class="header__nav--li nav-item"><a class="nav-link active text-uppercase" aria-current="page" href="index.html">home</a></li>
+                        <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/videos.html">videos</a></li>
+                        <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/banda.html">banda</a></li>
+                        <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/galeria.html">galeria</a></li>
+                        <li class="header__nav--li nav-item"><a class="nav-link text-uppercase" href="./page/contacto.html">contacto</a></li>              
+                    </ul>
+                </div>
+            </section>
         </nav>
     </header>
 <!-- ▲FIN HEADER DE LA PAGINA-->
